==> dvescovi1/openmrn/src/freertos_drivers/st/Stm32Can.cpp <==
#include "Stm32Can.hpp"
#include <stdint.h>
#include "can_ioctl.h"
#include "stm32f_hal_conf.hpp"
#include "stm32f0xx_hal_cortex.h"
#define CAN1_IRQN CEC_CAN_IRQn
#define CAN1 CAN
#define CAN_CLOCK cpu_clock_hz
#include "stm32f1xx_hal_cortex.h"
#define SPLIT_INT
#define CAN1_TX_IRQN USB_HP_CAN1_TX_IRQn
#define CAN1_IRQN CAN1_TX_IRQN
#define CAN1_SECOND_IRQN USB_LP_CAN1_RX0_IRQn
#define CAN1_THIRD_IRQN CAN1_SCE_IRQn
#define CAN2_TX_IRQN CAN2_TX_IRQn
#define CAN2_IRQN CAN2_TX_IRQN
#define CAN2_SECOND_IRQN CAN2_RX0_IRQn
#define CAN2_THIRD_IRQN CAN2_SCE_IRQn
#define CAN_CLOCK (cm3_cpu_clock_hz >> 1)
#include "stm32f3xx_hal_cortex.h"
#define SPLIT_INT
#define CAN1_TX_IRQN USB_HP_CAN_TX_IRQn
#define CAN1_IRQN CAN1_TX_IRQN
#define CAN1_SECOND_IRQN USB_LP_CAN_RX0_IRQn
#define CAN1_THIRD_IRQN CAN_SCE_IRQn
#define CAN1 CAN
#define CAN_CLOCK (cm3_cpu_clock_hz >> 1)
#include "stm32l4xx_hal_cortex.h"
#define SPLIT_INT
#define CAN1_TX_IRQN CAN1_TX_IRQn
#define CAN1_IRQN CAN1_TX_IRQN
#define CAN1_SECOND_IRQN CAN1_RX0_IRQn
#define CAN1_THIRD_IRQN CAN1_SCE_IRQn
#define CAN_CLOCK (cm3_cpu_clock_hz)
#define CAN2_TX_IRQN CAN2_TX_IRQn
#define CAN2_IRQN CAN2_TX_IRQN
#define CAN2_SECOND_IRQN CAN2_RX0_IRQn
#define CAN2_THIRD_IRQN CAN2_SCE_IRQn
#include "stm32f7xx_hal_cortex.h"
#define SPLIT_INT
#define CAN1_TX_IRQN CAN1_TX_IRQn
#define CAN1_IRQN CAN1_TX_IRQN
#define CAN1_SECOND_IRQN CAN1_RX0_IRQn
#define CAN1_THIRD_IRQN CAN1_SCE_IRQn
#define CAN_CLOCK (cm3_cpu_clock_hz >> 2) // 54 MHz, sysclk/4

void Stm32Can::enable()
{
    /* disable sleep, enter init mode */
    can_->MCR = CAN_MCR_INRQ;

    /* Time triggered tranmission off
     * Bus off state is left automatically
     * Auto-Wakeup mode disabled
     * automatic re-transmission enabled
     * receive FIFO not locked on overrun
     * TX FIFO mode on
     */
    can_->MCR |= (CAN_MCR_ABOM | CAN_MCR_TXFP);

    /* Setup timing.
     * 125,000 Kbps = 8 usec/bit
     */
    can_->BTR = (CAN_BS1_5TQ | CAN_BS2_2TQ | CAN_SJW_1TQ |
                ((CAN_CLOCK / 1000000) - 1));

    /* enter normal mode */
    can_->MCR &= ~CAN_MCR_INRQ;

    /* Enter filter initialization mode.  Filter 0 will be used as a single
     * 32-bit filter, ID Mask Mode, we accept everything, no mask.
     */
    can_->FMR |= CAN_FMR_FINIT;
    can_->FM1R = 0;
    can_->FS1R = 0x000000001;
    can_->FFA1R = 0;
    can_->sFilterRegister[0].FR1 = 0;
    can_->sFilterRegister[0].FR2 = 0;

    /* Activeate filter and exit initialization mode. */
    can_->FA1R = 0x000000001;
    can_->FMR &= ~CAN_FMR_FINIT;

    state_ = CAN_STATE_ACTIVE;

    /* enable interrupts */
    can_->IER = (CAN_IER_BOFIE | CAN_IER_EPVIE | CAN_IER_EWGIE); // errors
    can_->IER |= (CAN_IER_ERRIE | CAN_IER_FMPIE0); // error + receive
    HAL_NVIC_EnableIRQ(canIrqn_);
#ifdef SPLIT_INT
    HAL_NVIC_EnableIRQ(canSecondIrqn_);
    HAL_NVIC_EnableIRQ(canThirdIrqn_);
#endif
}

void Stm32Can::disable()
{
    HAL_NVIC_DisableIRQ(canIrqn_);
#ifdef SPLIT_INT
    HAL_NVIC_DisableIRQ(canSecondIrqn_);
    HAL_NVIC_DisableIRQ(canThirdIrqn_);
#endif
    can_->IER = 0;

    state_ = CAN_STATE_STOPPED;

    /* disable sleep, enter init mode */
    can_->MCR = CAN_MCR_INRQ;
}

void Stm32Can::tx_msg()
{
    // If we are error passive, the last transmission ended with an error, and
    // there are no free TX mailboxes, then we flush the input queue. This is a
    // workaround because the STM32 CAN controller can get stuck in this state
    // and never get to bus off if the TX attempts end up with no-ack (meaning
    // the controller is alone on the bus).
    if ((can_->ESR & CAN_ESR_EPVF) && ((can_->ESR & CAN_ESR_LEC_Msk) != 0) &&
        ((can_->TSR & (CAN_TSR_TME0 | CAN_TSR_TME1 | CAN_TSR_TME2)) == 0))
    {
        txBuf->flush();
        txBuf->signal_condition();
        return;
    }

    /* see if we can send anything out */
    struct can_frame *can_frame;

    size_t msg_count = txBuf->data_read_pointer(&can_frame);
    unsigned i;

    for (i = 0; i < msg_count; ++i, ++can_frame)
    {
        volatile CAN_TxMailBox_TypeDef *mailbox;
        if (can_->TSR & CAN_TSR_TME0)
        {
            mailbox = can_->sTxMailBox + 0;
        }
        else if (can_->TSR & CAN_TSR_TME1)
        {
            mailbox = can_->sTxMailBox + 1;
        }
        else if (can_->TSR & CAN_TSR_TME2)
        {
            mailbox = can_->sTxMailBox + 2;
        }
        else
        {
            /* no empty mailboxes left to fill */
            break;
        }

        /* setup frame */
        if (can_frame->can_eff)
        {
            mailbox->TIR = (can_frame->can_id << 3) | CAN_TI0R_IDE;
        }
        else
        {
            mailbox->TIR = can_frame->can_id << 21;
        }
        if (can_frame->can_rtr)
        {
            mailbox->TIR |= CAN_TI0R_RTR;
        }
        else
        {
            mailbox->TDTR = can_frame->can_dlc;
            mailbox->TDLR = (can_frame->data[0] <<  0) |
                            (can_frame->data[1] <<  8) |
                            (can_frame->data[2] << 16) |
                            (can_frame->data[3] << 24);
            mailbox->TDHR = (can_frame->data[4] <<  0) |
                            (can_frame->data[5] <<  8) |
                            (can_frame->data[6] << 16) |
                            (can_frame->data[7] << 24);
        }

        /* request transmission */
        mailbox->TIR |= CAN_TI0R_TXRQ;
    }

    if (i)
    {
        txBuf->consume(i);
        txBuf->signal_condition();
    }

    /* enable transmit interrupt */
    can_->IER |= CAN_IER_TMEIE;
}
