==> dvescovi1/openmrn/src/freertos_drivers/nxp/Lpc17xx40xxCan.cpp <==
#include <stdint.h>
#include "Lpc17xx40xxCan.hpp"
#include "chip.h"
#include "nmranet_config.h"

void LpcCan::enable()
{
    Chip_CAN_Init(base, LPC_CANAF, LPC_CANAF_RAM);
    if (base == LPC_CAN2)
    {
        Chip_CAN_SetBitRate(base, config_nmranet_can_bitrate());
    }
    else if (base == LPC_CAN1)
    {
        Chip_CAN_SetBitRate(base, config_can2_bitrate());
    }
    else
    {
        DIE("Unknown CAN base address.");
    }
    Chip_CAN_SetAFMode(LPC_CANAF, CAN_AF_BYBASS_MODE);
    Chip_CAN_EnableInt(base, CAN_IER_BITMASK & 
                             ~(CAN_IER_TIE2 | CAN_IER_TIE3 | CAN_ICR_IDI));

    if (intCount++ == 0)
    {
        NVIC_EnableIRQ(CAN_IRQn);
    }
}

void LpcCan::disable()
{
    if (--intCount == 0)
    {
        NVIC_DisableIRQ(CAN_IRQn);
    }
    Chip_CAN_DisableInt(base, CAN_IER_BITMASK &
                             ~(CAN_IER_TIE2 | CAN_IER_TIE3 | CAN_ICR_IDI));
    Chip_CAN_DeInit(base);
}

void LpcCan::tx_msg()
{
    if (Chip_CAN_GetStatus(base) & CAN_SR_TBS(0))
    {
        struct can_frame *can_frame;

        if (txBuf->data_read_pointer(&can_frame))
        {
            /* The LPC Chip drivers perform a lot of extra copying, which is
             * stupid.  We can do significantly better by using the structure
             * members in the can_17xx_40xx.h header directly.
             */

            /* load the next message to transmit */
            base->TX[0].TFI = 0;
            if (can_frame->can_eff)
            {
                base->TX[0].TFI |= CAN_TFI_FF;
                base->TX[0].TID = CAN_TID_ID29(can_frame->can_id);
            }
            else
            {
                base->TX[0].TID = CAN_TID_ID11(can_frame->can_id);
            }
            if (can_frame->can_rtr)
            {
                base->TX[0].TFI |= CAN_TFI_RTR;
            }
            else
            {
                base->TX[0].TFI |= CAN_TFI_DLC(can_frame->can_dlc);
                for (unsigned i = 0; i < (CAN_MSG_MAX_DATA_LEN + 3) / 4; ++i)
                {
                    base->TX[0].TD[i] = (can_frame->data[4 * i + 0] <<  0) |
                                        (can_frame->data[4 * i + 1] <<  8) |
                                        (can_frame->data[4 * i + 2] << 16) |
                                        (can_frame->data[4 * i + 3] << 24);
                }
            }

            Chip_CAN_SetCmd(base, CAN_CMR_STB(0) | CAN_CMR_TR);
            txBuf->consume(1);
            txBuf->signal_condition();
        }
    }
}
